--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+//    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
     // volley http library
